[package]
name = "uconix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "client","shared"]

[dependencies]
beef = { version = "0.5.2", features = ["serde"] }
eyre = "0.6.12"
minijinja = { version = "2.0.2", features = ["loader", "json", "preserve_order"] }
mlua = { version = "0.9.9", features = ["serialize", "send", "macros", "async", "lua54", "parking_lot", "vendored"] }
passfd = "0.1.6"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-rusqlite = "0.5.1"
tokio-util = { version = "0.7.11", features = ["rt"] }
rmp-serde = "1.3.0"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

shared = { path = "shared" }
